# chatbot-platform

./: .gitignore  ARCHITECTURE.md  BACKEND.md  FRONTEND.md  POTENTIAL.md  PROCEDURE.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 1a2b3c4d5e6f_initial_migration.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  chat.py  files.py  projects.py  users.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/db/: session.py
backend/app/middleware/: error_handler.py  rate_limiter.py
backend/app/models/: __init__.py  message.py  project.py  project_file.py  refresh_token.py  user.py
backend/app/schemas/: auth.py  common.py  file.py  message.py  project.py  user.py
backend/app/services/: auth_service.py  chat_service.py  file_service.py  project_service.py  user_service.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.api.ts  axios.ts  chat.api.ts  files.api.ts  projects.api.ts
frontend/src/components/auth/: LoginForm.tsx  RegisterForm.tsx
frontend/src/components/chat/: ChatInput.tsx  (+3 more)
frontend/src/hooks/: useAuth.ts  useChat.ts  useProject.ts
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  NotFoundPage.tsx  ProjectPage.tsx  RegisterPage.tsx
frontend/src/store/: authStore.ts  uiStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: formatDate.ts
(+13 files in other folders)
